tests/cases/ffi/errors/extern-cpp-removed.ari
extern "C++" fn cpp_add(left: i64, right: i64) -> i64;

fn main() -> i64 {
  return 0;
}

